<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tw_comment_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/tw_comment_field"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout_TextField"
        app:layout_constraintTop_toBottomOf="@id/tw_comment_field"
        android:layout_width="match_parent"
        android:layout_height="300dp">

        <TextView
            android:id="@+id/tw_textField"
            android:layout_width="350dp"
            android:layout_height="fill_parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tw_input_instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tw_input_instructions"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout_TextField"/>

    <EditText
        android:id="@+id/editText_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_username"
        android:textSize="@dimen/editText_size"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tw_input_instructions"/>


    <EditText
        android:id="@+id/editText_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_comment"
        android:textSize="@dimen/editText_size"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="13dp"
        app:layout_constraintStart_toEndOf="@id/editText_username"
        app:layout_constraintTop_toBottomOf="@id/tw_input_instructions"/>

    <TextView
        android:id="@+id/tw_textToSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tw_search_instructions"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_username"/>

    <EditText
        android:id="@+id/editText_textToSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_textToSearch"
        android:textSize="@dimen/editText_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tw_textToSearch"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"/>

    <EditText
        android:id="@+id/editText_dateToSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_dateToSearch"
        android:textSize="@dimen/editText_size"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="13dp"
        app:layout_constraintStart_toEndOf="@id/editText_textToSearch"
        app:layout_constraintTop_toBottomOf="@+id/tw_textToSearch"
        android:inputType="date"/>

    <TextView
        android:id="@+id/tw_searchResultText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tw_searchResult"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="15dp"
        app:layout_constraintTop_toBottomOf="@id/editText_textToSearch"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tw_searchResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/tw_searchResultText"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/button_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_submit"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/constraintLayout_TextField"
        app:layout_constraintLeft_toRightOf="@id/editText_comment" />

    <Button
        android:id="@+id/button_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_search"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/button_submit"
        app:layout_constraintStart_toEndOf="@id/editText_dateToSearch" />

</androidx.constraintlayout.widget.ConstraintLayout>